// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flushable-import existing chunkName: existing chunkName 1`] = `

import(/* webpackChunkName: 'Bar' */ "./Foo")

      ↓ ↓ ↓ ↓ ↓ ↓

import _path from "path";
import _flushableImport from "@vpukhanov/babel-plugin-flushable-import/flushable-import";

_flushableImport({
  load: () =>
    Promise.all([
      import(
        /* webpackChunkName: 'Bar' */
        "./Foo"
      ),
    ]).then((proms) => proms[0]),
  resolve: () => require.resolveWeak("./Foo"),
  path: () => _path.join(__dirname, "./Foo"),
  chunkName: "Bar",
});


`;

exports[`flushable-import multiple imports: multiple imports 1`] = `

import("one"); import("two"); import("three");

      ↓ ↓ ↓ ↓ ↓ ↓

import _path3 from "path";
import _flushableImport3 from "@vpukhanov/babel-plugin-flushable-import/flushable-import";
import _path2 from "path";
import _flushableImport2 from "@vpukhanov/babel-plugin-flushable-import/flushable-import";
import _path from "path";
import _flushableImport from "@vpukhanov/babel-plugin-flushable-import/flushable-import";

_flushableImport({
  load: () =>
    Promise.all([
      import(
        /* webpackChunkName: 'one' */
        "one"
      ),
    ]).then((proms) => proms[0]),
  resolve: () => require.resolveWeak("one"),
  path: () => _path.join(__dirname, "one"),
  chunkName: "one",
});

_flushableImport2({
  load: () =>
    Promise.all([
      import(
        /* webpackChunkName: 'two' */
        "two"
      ),
    ]).then((proms) => proms[0]),
  resolve: () => require.resolveWeak("two"),
  path: () => _path2.join(__dirname, "two"),
  chunkName: "two",
});

_flushableImport3({
  load: () =>
    Promise.all([
      import(
        /* webpackChunkName: 'three' */
        "three"
      ),
    ]).then((proms) => proms[0]),
  resolve: () => require.resolveWeak("three"),
  path: () => _path3.join(__dirname, "three"),
  chunkName: "three",
});


`;

exports[`flushable-import static import (with file extension): static import (with file extension) 1`] = `

import("./Foo.js")

      ↓ ↓ ↓ ↓ ↓ ↓

import _path from "path";
import _flushableImport from "@vpukhanov/babel-plugin-flushable-import/flushable-import";

_flushableImport({
  load: () =>
    Promise.all([
      import(
        /* webpackChunkName: 'Foo' */
        "./Foo.js"
      ),
    ]).then((proms) => proms[0]),
  resolve: () => require.resolveWeak("./Foo.js"),
  path: () => _path.join(__dirname, "./Foo.js"),
  chunkName: "Foo",
});


`;

exports[`flushable-import static import (with relative paths): static import (with relative paths) 1`] = `

import("../../Foo")

      ↓ ↓ ↓ ↓ ↓ ↓

import _path from "path";
import _flushableImport from "@vpukhanov/babel-plugin-flushable-import/flushable-import";

_flushableImport({
  load: () =>
    Promise.all([
      import(
        /* webpackChunkName: 'Foo' */
        "../../Foo"
      ),
    ]).then((proms) => proms[0]),
  resolve: () => require.resolveWeak("../../Foo"),
  path: () => _path.join(__dirname, "../../Foo"),
  chunkName: "Foo",
});


`;

exports[`flushable-import static import: static import 1`] = `

import("./Foo")

      ↓ ↓ ↓ ↓ ↓ ↓

import _path from "path";
import _flushableImport from "@vpukhanov/babel-plugin-flushable-import/flushable-import";

_flushableImport({
  load: () =>
    Promise.all([
      import(
        /* webpackChunkName: 'Foo' */
        "./Foo"
      ),
    ]).then((proms) => proms[0]),
  resolve: () => require.resolveWeak("./Foo"),
  path: () => _path.join(__dirname, "./Foo"),
  chunkName: "Foo",
});


`;
